[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-20-Hit_Box_Spawn.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Map_Parts/MP-17-Weap_Spawner.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Map_Parts/StaticBody2D-pass-func-up.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 2 )

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Outline:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.075 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.075 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Middle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.075 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Middle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.05, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "spent"
}, {
"args": [  ],
"method": "spawn"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CPUParticles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.075 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Outline:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Middle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Middle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "spent"
} ]
}

[node name="MP-20_Hit_Box_Spawn_01" type="Node2D" groups=["hittable", "map_parts"]]
script = ExtResource( 1 )

[node name="Outline" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 3 )
hframes = 5
vframes = 4

[node name="Back" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 5
vframes = 4
frame = 1

[node name="Middle" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 3 )
hframes = 5
vframes = 4
frame = 5

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["hittable"]]
visible = false
collision_layer = 2147876876
collision_mask = 918028
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Area2D_Hit" type="Area2D" parent="."]
visible = false
collision_layer = 262144
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Hit"]
position = Vector2( 0, 12.3958 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )
anims/Reset = SubResource( 4 )

[node name="Pos2D_Spawn" type="Position2D" parent="."]
position = Vector2( 0, -26 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Timer_Hit" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, -26 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 140.5
initial_velocity_random = 0.16

[connection signal="body_entered" from="Area2D_Hit" to="." method="_on_Area2D_Hit_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_Hit" to="." method="_on_Timer_Hit_timeout"]
